# geary-gemini

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEARY.md  README.md  docker-compose.yml  meson.build
bindings/vapi/: config.vapi
build-aux/: make-deb.sh
mcp-server/: package-lock.json  package.json  server.js
output/: geary-gemini_46.0_amd64.deb
src/: meson.build
src/client/: meson.build
src/client/application/: application-client.vala  application-main-window.vala
src/client/components/: components-headerbar-conversation.vala  components-preferences-window.vala
src/client/composer/: composer-editor.vala  composer-widget.vala
src/client/conversation-viewer/: conversation-email.vala
src/client/gemini/: gemini-dbus-service.vala  gemini-service.vala  gemini-sidebar.vala
src/client/plugin/messaging-menu/: messaging-menu.vala
src/client/translation/: meson.build  translation-service.vala
test/: meson.build  test-client.vala
test/client/gemini/: gemini-service-test.vala
ui/: application-main-window.ui  components-conversation-actions.ui  components-headerbar-conversation.ui  composer-editor.ui  conversation-email.ui  geary.css  gemini-sidebar.ui  org.gnome.Geary.gresource.xml
